--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to my BLOG!!!!</title>
-</head>
-<body>
-    <h1>Welcome to my BLOG!!!!</h1>
-    <hr>{%for post in posts%}
-            <p style="font-family: 微軟正黑體; font-size: 14pt;font-weight: bold;"></p>
+{%extends 'base.html'%} <!--繼承base.html模板-->
+{%block title %} mysite {%endblock%}
+{%block headmessage%}
+    <h3 style="font-family: 微軟正黑體;">文章列表</h3>
+{%endblock%}
+{%block content%}
+    {%for post in posts%}
+        <p style="font-family: 微軟正黑體;font-size: 14pt;font-weight: bold;">
             <a href="/post/{{post.slug}}">{{post.title}}</a>
+        </p>
     {%endfor%}
-    <hr>
-    <h3>現在時刻:{{now}}</h3>
-</body>
-</html>
+{%endblock%}
