--- a/templates/post.html
+++ b/templates/post.html
@@ -1,16 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>歡迎光臨我的部落^_^</title>
-</head>
-<body>
-    <h1>{{post.title}}</h1>
-    <hr>
-        <p style="font-family: 微軟正黑體; font-size: 12pt;letter-spacing: 2pt;">{{post.body}}</p>
-    <hr>
-    <h3><a href="/">回首頁</a></h3>
-</body>
-</html>
+<!---->
+{%extends 'base.html'%} <!--繼承base.html模板-->
+{%block title %} {{post.title}} --文學天地{%endblock%}
+{%block headmessage%}
+    <h3 style="font-family: 標楷體;">{{post.title}}</h3> 
+    <a style="font-family: 微軟正黑體;" href="/">回首頁</a>
+{%endblock%}
+{%block content%}
+        <p style="font-family: 微軟正黑體;font-size: 14pt;letter-spacing:2pt;">
+            {{post.body}}</a>
+        </p>
+{%endblock%}
+}
