--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 <!-- 模板基底-->
+{% load static %} <!--存取靜態檔-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,13 +7,73 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{%block title%} {%endblock%}</title>
-</head>
+
+<link rel="stylesheet" href="{% static '/bootstrap4/css/bootstrap.min.css'%}" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+<script src="{% static '/bootstrap4/js/bootstrap.min.js' %}" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="x"></script>
 <body>
-    {%include 'header.html'%}
-    {%block headmessage%} {%endblock%}
-    <hr>
-    {%block content%} {%endblock%}
-    <hr>
-    {%include 'footer.html'%} 
+    <div class="container-fluid">
+        {%include 'header.html'%}
+        <div class="row">
+            <div class="col-4 col-xl-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="{% static 'images/cu.jpg' %}" class="card-img-top" alt='圖片失效就顯示這段文字'>  
+                    <div class="card-body">
+                        <h3 class="card-title">MENU</h3>
+                    </div>
+                    <div class="card-body">
+                        <ul class='list-group list-group-flush' > 
+                            <a href="/" class="list-group-item">HOME</a>
+                            <a href="https://www.twitch.tv/" class="list-group-item">TWITCH</a>
+                            <a href="https://wall.alphacoders.com/big.php?i=682156" class="list-group-item">AnimeGirl</a>
+                        </ul>
+                    </div>
+                </div><!--"card" style="width: 18rem;-->
+            </div><!--col-sm-4 col-md-4-->
+            <div class="col-4 col-xl-8">
+                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                    <ol class="carousel-indicators"><!--箭頭-->
+                      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                      <div class="carousel-item active">
+                        <img src="{% static '/images/cute.jpg' %}" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="{% static '/images/lol.jpg' %}" class="d-block w-100" alt="...">
+                      </div>
+                      <div class="carousel-item">
+                        <img src="{% static '/images/girl.jpg' %}" class="d-block w-100" alt="...">
+                      </div>
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="sr-only">Next</span>
+                    </a>
+                  </div>    
+            </div>
+        </div>
+            <div class="col-8 col-md-8">
+                <div class="card-body">
+                    <div class="card-title">
+                    {%block headmessage%} {%endblock%}
+                    </div>
+                    <div class="card-text">
+                    {%block content%} {%endblock%}
+                    </div>
+                    <div class="card-footer text-muted">   
+                    {%include 'footer.html'%} 
+                    </div>
+                </div>
+            </div><!--col-sm-8 col-md-8-->
+        </div><!--row-->
+    </div><!--container-fluid-->
 </body>
 </html>
