--- a/templates/header.html
+++ b/templates/header.html
@@ -1,1 +1,22 @@
-<h1 style="font-family: 微軟正黑體;">Welcome^_^</h1>
+{%load static%}
+<div class="card text-center">
+    <div class="card-header">
+      <ul class="nav nav-tabs card-header-tabs">
+        <li class="nav-item">
+          <a class="nav-link active" href="/">討論區</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="shop.html">逛逛</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link disabled" href="#">課金區</a>
+        </li>
+      </ul>
+    </div>
+    <div class="card-body">
+      <h5 class="card-title">欸，你們好，我一個人住，我的房子還滿大的，歡迎你們來我家玩，玩累了就直接睡覺，沒問題的。</h5>
+      <p class="card-text">很勇嘛，身材不錯喔，滿結實的啊</p>
+      <a href="#" class="btn btn-primary">去傑哥家</a>
+    </div>
+</div>
+
