--- a/templates/header.html
+++ b/templates/header.html
@@ -1,22 +1,37 @@
 {%load static%}
-<div class="card text-center">
-    <div class="card-header">
-      <ul class="nav nav-tabs card-header-tabs">
-        <li class="nav-item">
-          <a class="nav-link active" href="/">討論區</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="shop.html">逛逛</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link disabled" href="#">課金區</a>
-        </li>
-      </ul>
+<nav class="navbar navbar-expand-lg navbar-light bg-light" id='navbar'>
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/"><img src="{% static '/images/ghost.png' %}" style="width: 60px;"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/">首頁</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Waifu</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              下拉式選單
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" tabindex="-1" aria-disabled="false">去看片</a>
+          </li>
+        </ul>
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+      </div>
     </div>
-    <div class="card-body">
-      <h5 class="card-title">欸，你們好，我一個人住，我的房子還滿大的，歡迎你們來我家玩，玩累了就直接睡覺，沒問題的。</h5>
-      <p class="card-text">很勇嘛，身材不錯喔，滿結實的啊</p>
-      <a href="#" class="btn btn-primary">去傑哥家</a>
-    </div>
-</div>
-
+  </nav>
