--- a/templates/base.html
+++ b/templates/base.html
@@ -7,73 +7,120 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{%block title%} {%endblock%}</title>
-
-<link rel="stylesheet" href="{% static '/bootstrap4/css/bootstrap.min.css'%}" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-<script src="{% static '/bootstrap4/js/bootstrap.min.js' %}" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="{% static 'bootstrap4/css/bootstrap.min.css' %}">
+<script src="{% static 'bootstrap4/js/bootstrap.min.js' %}"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="x"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<style>
+.list-group-item{ /*MENU TEXT*/
+  font-size: 20px;
+}
+.d-flex{ /*SearchButton*/
+  position: absolute;right:0;
+}
+#navbar{
+  font-size: 20px;
+  padding:1rem;
+  margin-bottom: 2rem;
+}
+.carousel .carousel-item{
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+}
+</style>
+</head>
 <body>
     <div class="container-fluid">
         {%include 'header.html'%}
-        <div class="row">
-            <div class="col-4 col-xl-4">
-                <div class="card" style="width: 18rem;">
-                    <img src="{% static 'images/cu.jpg' %}" class="card-img-top" alt='圖片失效就顯示這段文字'>  
-                    <div class="card-body">
-                        <h3 class="card-title">MENU</h3>
-                    </div>
-                    <div class="card-body">
-                        <ul class='list-group list-group-flush' > 
-                            <a href="/" class="list-group-item">HOME</a>
-                            <a href="https://www.twitch.tv/" class="list-group-item">TWITCH</a>
-                            <a href="https://wall.alphacoders.com/big.php?i=682156" class="list-group-item">AnimeGirl</a>
-                        </ul>
-                    </div>
-                </div><!--"card" style="width: 18rem;-->
-            </div><!--col-sm-4 col-md-4-->
-            <div class="col-4 col-xl-8">
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                    <ol class="carousel-indicators"><!--箭頭-->
-                      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                    </ol>
-                    <div class="carousel-inner">
-                      <div class="carousel-item active">
-                        <img src="{% static '/images/cute.jpg' %}" class="d-block w-100" alt="...">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="{% static '/images/lol.jpg' %}" class="d-block w-100" alt="...">
-                      </div>
-                      <div class="carousel-item">
-                        <img src="{% static '/images/girl.jpg' %}" class="d-block w-100" alt="...">
-                      </div>
-                    </div>
-                    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Previous</span>
-                    </a>
-                    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                      <span class="sr-only">Next</span>
-                    </a>
-                  </div>    
+        <div class="row justify-content-md-center">
+          <div class="col-md-3">
+            <div class="card">
+              <img src="{% static 'images/bae.jpg' %}" class="card-img-top" alt='圖片失效就顯示這段文字'>  
+              <div class="card-body">
+                  <h3 class="card-title">MENU</h3>
+                  <p class="card-text">here are some choices</p>
+              </div>
+              <div class="card-body">
+                  <ul class='list-group list-group-flush' >  
+                      <a href="/" class="list-group-item">HOME</a>
+                      <a href="https://www.twitch.tv/" class="list-group-item">=U=</a>
+                      <a href="https://wall.alphacoders.com/big.php?i=682156" class="list-group-item">YAHELLO</a>
+                  </ul>
+              </div>
+            </div><!--"card"-->
+          </div><!--col-md-4-->
+          <div class="col-md-9">
+            <div class="card">
+              <div class="card-body">
+                <div class="card-header">
+                  {%block headmessage%} {%endblock%}
+                  </div>
+                  <div class="card-body">
+                  {%block content%} {%endblock%}
+                  </div>
+              </div><!--card-body-->
+            </div><!--card-->
+          </div><!--col-8-->
+        </div><!--row-->
+        <div class="row justify-content-center">
+          <div class="col-sm-6 col-lg-10">
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="{% static '/images/cute.jpg' %}" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="{% static '/images/girl.jpg' %}" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="{% static '/images/wat.jpg' %}" class="d-block w-100" alt="...">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div><!--carousel-->
+          </div><!--col-sm-6 lg-12-->
+        </div><!--row-->
+        <div class="row justify-content-center">
+          <div class="col-lg-10">
+            <div class="card text-center">
+              <div class="card-header">
+                <ul class="nav nav-tabs card-header-tabs">
+                  <li class="nav-item">
+                    <a class="nav-link active" href="/">討論區</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="shop.html">逛逛</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled" href="#">課金區</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">欸，你們好，我一個人住，我的房子還滿大的，歡迎你們來我家玩，玩累了就直接睡覺，沒問題的。</h5>
+                <p class="card-text">很勇嘛，身材不錯喔，滿結實的啊</p>
+                <a href="#" class="btn btn-primary">去傑哥家</a>
+              </div>
             </div>
-        </div>
-            <div class="col-8 col-md-8">
+          </div><!--col-10 col-lg-10-->
+        </div><!--row-->
+        <div class="row">
+              <div class="col-sm-8 col-md-12">
                 <div class="card-body">
-                    <div class="card-title">
-                    {%block headmessage%} {%endblock%}
-                    </div>
-                    <div class="card-text">
-                    {%block content%} {%endblock%}
-                    </div>
                     <div class="card-footer text-muted">   
                     {%include 'footer.html'%} 
                     </div>
                 </div>
-            </div><!--col-sm-8 col-md-8-->
-        </div><!--row-->
+              </div><!--col-sm-8 col-md-8-->
+        </div><!--div class='row'-->
     </div><!--container-fluid-->
 </body>
 </html>
