--- a/templates/post.html
+++ b/templates/post.html
@@ -2,12 +2,12 @@
 {%extends 'base.html'%} <!--繼承base.html模板-->
 {%block title %} {{post.title}} --文學天地{%endblock%}
 {%block headmessage%}
-    <h3 style="font-family: 標楷體;">{{post.title}}</h3> 
+    <h3>{{post.title}}</h3> 
     <a style="font-family: 微軟正黑體;" href="/">回首頁</a>
 {%endblock%}
 {%block content%}
-        <p style="font-family: 微軟正黑體;font-size: 14pt;letter-spacing:2pt;">
-            {{post.body}}</a>
-        </p>
+    <p style="font-family: 微軟正黑體;font-size: 14pt;letter-spacing:2pt;">
+        {{post.body | safe}}</a>
+    </p>
 {%endblock%}
 }
