--- a/templates/post.html
+++ b/templates/post.html
@@ -1,13 +1,14 @@
 <!---->
 {%extends 'base.html'%} <!--繼承base.html模板-->
-{%block title %} {{post.title}} --文學天地{%endblock%}
+{% load markdown_deux_tags %}
+{%block title %} {{post.title}} --文學天地 {%endblock%}
 {%block headmessage%}
     <h3>{{post.title}}</h3> 
-    <a style="font-family: 微軟正黑體;" href="/">回首頁</a>
+    <a style="font-family: 微軟正黑體;" href="/">回列表</a>
 {%endblock%}
 {%block content%}
     <p style="font-family: 微軟正黑體;font-size: 14pt;letter-spacing:2pt;">
-        {{post.body | safe}}</a>
+        {{post.body | markdown}}</a>
     </p>
 {%endblock%}
 }
