--- a/templates/post.html
+++ b/templates/post.html
@@ -1,14 +1,12 @@
-<!---->
 {%extends 'base.html'%} <!--繼承base.html模板-->
-{% load markdown_deux_tags %}
-{%block title %} {{post.title}} --文學天地 {%endblock%}
+{% load markdown_deux_tags %}<!--簡化HTML-->
 {%block headmessage%}
     <h3>{{post.title}}</h3> 
     <a style="font-family: 微軟正黑體;" href="/">回列表</a>
+    <a href='{% url 'post-url' 2020 12 1 01%}'>SHOW POST</a>
 {%endblock%}
 {%block content%}
     <p style="font-family: 微軟正黑體;font-size: 14pt;letter-spacing:2pt;">
-        {{post.body | markdown}}</a>
+        {{post.body | markdown}}
     </p>
 {%endblock%}
-}
