--- a/templates/header.html
+++ b/templates/header.html
@@ -1,4 +1,8 @@
 {%load static%}
+<link rel="stylesheet" href="{% static 'bootstrap5/css/bootstrap.min.css' %}"> 
+<script src="{% static 'bootstrap5/js/bootstrap.min.js' %}"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+<script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 <nav class="navbar navbar-expand-lg navbar-light bg-light" id='navbar'>
     <div class="container-fluid">
       <a class="navbar-brand" href="/"><img src="{% static '/images/ghost.png' %}" style="width: 60px;"></a>
@@ -11,22 +15,28 @@
             <a class="nav-link active" aria-current="page" href="/">首頁</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Waifu</a>
+          {% if useraccount %}
+            <a class="nav-link" href="/accounts/logout/">登出</a>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              liveStream
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="/video/">Anime</a></li>
+                <li><a class="dropdown-item" href="#">Sleep</a></li>
+                <li><a class="dropdown-item" href="#">Chill</a></li>
+                <li><hr class="dropdown-divider"></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/members/{{members.serialnum}}" tabindex="-1" aria-disabled="false">會員資料</a>
+            </li>
           </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              下拉式選單
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
-            </ul>
-          </li>
+          {% else %}
           <li class="nav-item">
-            <a class="nav-link" href="#" tabindex="-1" aria-disabled="false">去看片</a>
+            <a class="nav-link" href="/accounts/login/">登入</a>
           </li>
+          {% endif %}
         </ul>
         <form class="d-flex">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
