--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,16 @@
 {%extends 'base.html'%} <!--繼承base.html模板-->
+{% load embed_video_tags %}
 {%block title %} mysite {%endblock%}
 {%block headmessage%}
     <h3 style="font-family: 微軟正黑體;">文章列表</h3>
 {%endblock%}
 {%block content%}
+{% if useraccount%}
+    歡迎~{{useraccount}}
+{% endif %}
+    {% for i in obj %}
+        {%video i.video %}  
+    {% endfor %}
     {%for post in posts%}
     <div class="card">
         <div class="card-header" style="background-color: rgb(253, 253, 221);">
