--- a/templates/authentication/logout.html
+++ b/templates/authentication/logout.html
@@ -1,4 +1,4 @@
-{% extends 'base.html'%}
+{% extends 'authentication/base_Login.html'%}
 {% block title %}Login{% endblock  %}
 {%block headmessage%}
     <h3>88</h3>
