--- a/templates/base.html
+++ b/templates/base.html
@@ -1,34 +1,7 @@
-<!-- 模板基底-->
-{% load static %} <!--存取靜態檔-->
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{%block title%} {%endblock%}</title>
-<style>
-.list-group-item{ /*MENU TEXT*/
-  font-size: 20px;
-}
-.d-flex{ /*SearchButton*/
-  position: absolute;right:0;
-}
-#navbar{
-  padding:1rem;
-  font-size: 20px;
-  margin-bottom: 2rem;
-}
-.carousel .carousel-item{
-  width: 100%;
-  height: 100%;
-  object-fit: fill;
-}
-</style>
-</head>
-<body>
+{% load static %}<!--存取靜態檔-->
+{% include 'header.html'%}
+{% include 'header2.html' %}
     <div class="container-fluid">
-        {%include 'header.html'%}
         <div class="row justify-content-md-center">
           <div class="col-md-2">
             <div class="card border-dark mb-3 ">
@@ -37,7 +10,7 @@
                   <!-- <h3 class="card-title">MENU</h3> -->
               </div>
               <div class="card-body">
-                  <ul class='list-group list-group-flush'>  
+                  <ul class='list-group list-group-flush' style="font-size: 20px;">  
                       <a href="/" class="list-group-item">投票區</a>
                       <a href="https://www.twitch.tv/" class="list-group-item">哈啦區</a>
                       <a href="https://wall.alphacoders.com/big.php?i=682156" class="list-group-item">會員中心</a>
