--- a/templates/authentication/login.html
+++ b/templates/authentication/login.html
@@ -1,7 +1,5 @@
 {% extends 'authentication/base_Login.html' %}
-{% for message in messages%}
-    <div class="alert alert-{{message.tags}}">{{message}}</div>
-{% endfor %}
+{% load socialaccount %}
 {% block content %}
 {% for message in messages%}
     <div class="alert alert-{{message.tags}}">{{message}}</div>
@@ -11,30 +9,30 @@
 			<div class="card-header">
 				<h3>會員登入</h3>
 				<div class="d-flex justify-content-end social_icon">
-					<span><i class="fab fa-facebook-square"></i></span>
-					<span><a href="/accounts/"><i class="fab fa-google-plus-square"></i></a></span>
-					<span><i class="fab fa-twitter-square"></i></span>
+					<span><a href="#"><i class="fab fa-facebook-square"></i></a></span>
+					<span><a href="{% provider_login_url 'google'%}"><i class="fab fa-google-plus-square"></i></a></span>
+					<span><a href="#"><i class="fab fa-twitter-square"></i></a></span>
 				</div>
 			</div>
 			<div class="card-body">
 				<form action="{% url 'login' %}" method="POST" novalidate>{% csrf_token %}
 					<div class="input-group form-group">
-						<div class="input-group-prepend">
-							<span class="input-group-text"><a href="#"><i class="fas fa-user"></i></a></span> <!--插入USER ICON-->
+						<div class="input-group-prepend">						
+							<span class="input-group-text"><i class="fas fa-user"></i></span> <!--插入USER ICON-->
 						</div>
 						{{login_form.account}}
 					</div>
 					<div class="input-group form-group">
 						<div class="input-group-prepend">
-							<span class="input-group-text"><a href="#"><i class="fas fa-key"></i></a></span>
-						</div>
+							<span class="input-group-text"><i class="fas fa-key"></i></span>
+						</div>						
 						{{login_form.password}}
 					</div>
 					<div class="row align-items-center remember">
 						<input type="checkbox">記住帳號
 					</div>
 					<div class="form-group">
-						<input type="submit" value="登入" class="login_btn">
+						<input type="submit" value="登入" class="login_btn">{% csrf_token %}
 					</div>
                     <a href="#" id="forgetpassword" style="padding-left: 105px;position: relative;top: 25px;">忘記密碼?</a>
 				</form>
@@ -42,7 +40,7 @@
             <div class="card-footer">
                 <div class="d-flex justify-content-center links">
                     還不是全婆幫會員嗎?
-                    <a href="/accounts/register">註冊帳號</a>
+                    <a href="{% url 'signup' %}">註冊帳號</a>
                 </div>
             </div>
 		</div>
