--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
     <div class="card">
         <div class="card-header" style="background-color: rgb(253, 253, 221);">
             <p style="font-family: 微軟正黑體;font-size: 14pt;font-weight: bold;">
-                <a href="/post/{{post.slug}}">{{post.title}}</a>
+                <a href="{% url 'showpost' post.slug %}">{{post.title}}</a>
             </p>
         </div>
         <div class="card-body">
