--- a/templates/update_post.html
+++ b/templates/update_post.html
@@ -2,7 +2,7 @@
 {% load markdown_deux_tags %}<!--簡化HTML-->
 {% block title %} mysite {% endblock  %}
 {%block headmessage%}
-    <h3 style="font-family: 微軟正黑體;">我想說....</h3>
+    <h3 style="font-family: 微軟正黑體;">編輯貼文</h3>
 {%endblock%}
 {%block content%}
 {% for message in messages%}
@@ -10,7 +10,8 @@
 {% endfor %}
     <form method="POST">{% csrf_token %}
         {{form.as_p}}
-      <input class="btn btn-primary" type="submit" value="送出">
+      <input class="btn btn-primary" type="submit" value="更新">
       <input class="btn btn-primary" type="reset" value="重填">
     </form>
 {%endblock%}
+    
