--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -2,7 +2,7 @@
 {% load markdown_deux_tags %}<!--簡化HTML-->
 {%block headmessage%}
     <h3>{{post.pub_title}}</h3> 
-    <a style="font-family: 微軟正黑體;" href="/">回列表</a>
+    <a style="font-family: 微軟正黑體;" href="/">回首頁</a>
     <small>By: {{post.author.first_name}}-{{post.author.last_name}}</small>
 
 {%endblock%}
