--- a/mainsite/templates/index.html
+++ b/mainsite/templates/index.html
@@ -8,13 +8,15 @@
     {% for i in obj %}
         {%video i.video %}  
     {% endfor %}
-    {%for post in posts %} <!--object_list django模板內的物件-->
+    {%for post in object_list %} <!--object_list django模板內的物件-->
     <div class="card">
         <div class="card-header" style="background-color: rgb(253, 253, 221);">
             <p style="font-family: 微軟正黑體;font-size: 14pt;font-weight: bold;">
-                <a href="{% url 'post_detail' post.pk %}">{{post.pub_title}}</a> 
+                <a href="{% url 'post_detail' post.pk %}">{{post.pub_title}}</a>--<a href="{% url 'category_page' post.category %}">{{post.category}}</a>              
+                {% if user.is_authenticated %}
                 <small><a href="{% url 'Update_Post' post.pk %}">(edit)</a></small>
                 <small><a href="{% url 'delete_post' post.pk %}">(delete)</a></small>
+                {% endif %}
             </p>
         </div>
         <div class="card-body">
