--- a/mainsite/templates/update_post.html
+++ b/mainsite/templates/update_post.html
@@ -1,10 +1,12 @@
 {%extends 'base.html'%} <!--繼承base.html模板-->
 {% load markdown_deux_tags %}<!--簡化HTML-->
 {% block title %} mysite {% endblock  %}
+
 {%block headmessage%}
-    <h3 style="font-family: 微軟正黑體;">編輯貼文</h3>
+     <h3 style="font-family: 微軟正黑體;">編輯貼文<small></h3>
 {%endblock%}
 {%block content%}
+{% if user.is_authenticated %} <!--沒登入就無法編輯貼文-->
 {% for message in messages%}
   <div class="alert alert-{{message.tag}}">{{message}}</div>
 {% endfor %}
@@ -13,5 +15,9 @@
       <input class="btn btn-primary" type="submit" value="更新">
       <input class="btn btn-primary" type="reset" value="重填">
     </form>
+{% else %}  
+<h3>不是全婆幫會員還敢在這放縱!</h3>
+{% endif %}
+
 {%endblock%}
     
